--- a/package.json
+++ b/package.json
@@ -3,8 +3,9 @@
   "dependencies": {
     "postcss-normalize": "^10.0.1",
     "react": "17.0.2",
-    "react-bootstrap-icons": "1.6.1",
+    "react-bootstrap-icons": "^1.6.1",
     "react-dom": "17.0.2",
+    "react-router-dom": "^6.2.2",
     "react-scripts": "^5.0.0",
     "react-tooltip": "4.2.21"
   },
