--- a/tsconfig.json
+++ b/tsconfig.json
@@ -27,7 +27,7 @@
     ".next/types/**/*.ts",
     "**/*.ts",
     "**/*.tsx"
-  ],
+, "app/blog/[slug]/page.tsx"  ],
   "exclude": [
     "node_modules"
   ]
