--- a/package.json
+++ b/package.json
@@ -9,10 +9,12 @@
     "@types/mdx": "^2.0.10",
     "gray-matter": "^4.0.3",
     "next": "^14.0.4",
-    "postcss-normalize": "^10.0.1",
     "react": "^18",
     "react-dom": "^18",
-    "sharp": "^0.33.1"
+    "rehype-pretty-code": "^0.12.3",
+    "rehype-stringify": "^10.0.0",
+    "sharp": "^0.33.1",
+    "shikiji": "^0.9.0"
   },
   "devDependencies": {
     "@types/node": "^20",
